# hobby-backend

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
data_hub/: main.py
data_hub/data/: category_map.json  filters.json  metadata_map.json
data_hub/models/: model.py
data_hub/routes/: ai.py  dashboard.py  onboarding.py
data_hub/utils/: database_ops.py  encode.py  filter.py  log.py  metadata.py  openai.py  save_company.py
deployment/: deploy.sh
pipelines/: crustdata_filter.json  etl_pipeline.py
scripts/: api_analysis.py  auth_test.py  company_details.json  connect_db.py  dashboard.json  db_checks.py  fetch_api_and_dump.py  new_filter.json  read_api.py  run_local.sh  test_openai.py  test_scripts.py
sql/: insert_master.sql  master_db.sql
tests/: pytest.ini
